@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160404"
-#define public MagickPackageReleaseDate "snapshot-20160404"
+#define public MagickPackageVersionAddendum ".020160410"
+#define public MagickPackageReleaseDate "snapshot-20160410"
